# ffmpegDemo

./: README.md  build_ffmpeg.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ffmpegdemo/: DemoApplication.kt  FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/java/com/example/ffmpegdemo/decode/: DecodeAudioPlayFragment.kt  DecodeVideoPlayFragment.kt
app/src/main/res/layout/: fragment_decode_play.xml  fragment_first.xml  fragment_second.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle.kts
nativelib/src/main/cpp/: CMakeLists.txt
nativelib/src/main/cpp/jni/: nativelib.cpp
nativelib/src/main/cpp/jni/decode/: decodelib.cpp
nativelib/src/main/java/com/example/nativelib/: DecodeTool.kt  NativeLib.kt
